# reip-ml

./: .gitignore  CLAUDE.md  Dockerfile  Dockerfile.dev  PLAN.md  RUNBOOK.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: config.py  features.py  main.py  model_registry.py  schemas.py
app/routers/: health.py  predict.py
scripts/: generate_training_data.py  train_solar.py
tests/: conftest.py  test_features.py  test_health.py  test_model_registry.py  test_predict.py
